--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ task sourcesJar(type: Jar) {
 }
 
 group = 'com.github.leeonky'
-version = '0.0.4' + System.env.VERSION_SCOPE
+version = '0.1.0' + System.env.VERSION_SCOPE
 sourceCompatibility = 1.8
 
 jacocoTestReport {
@@ -46,6 +46,7 @@ repositories {
 
 dependencies {
     implementation 'org.skyscreamer:jsonassert:1.5.0'
+    implementation 'com.github.leeonky:DAL-java:0.0.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.assertj:assertj-core:3.10.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
